add release build

--- a/build.properties
+++ b/build.properties
@@ -13,6 +13,7 @@ dir.src.test = ${basedir}/srcTest
 dir.docs = ${basedir}/docs
 dir.libs = ${basedir}/libs
 dir.bin = ${basedir}/bin
+dir.release = ${basedir}/release
 
 #Project links
 project.links = http://www.soundstep.com/blog/downloads/somacore
