--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 #Properties file for build.xml
 project.name=somacore_framework
-somacore.version = v1.0.0
+somacore.version = v.1.0.1-ALPHA
 project.version.name = ${project.name}_${somacore.version}
 
 #User editable properties
